Fix alignment on console | Fix jump on comments

--- a/src/components/sections/home/overboard-story/devtools/devtools.module.scss
+++ b/src/components/sections/home/overboard-story/devtools/devtools.module.scss
@@ -60,7 +60,7 @@
           font-weight: 900;
         }
 
-        .marker {
+        .marker-container {
           display: none;
         }
       }
@@ -99,9 +99,17 @@
         }
       }
 
-      .marker,
+      .marker-container {
+        width: 16px;
+        height: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .marker-container,
       &.is-error::before {
-        margin-right: 15px;
+        margin-right: 12px;
       }
     }
   }
